<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/stockImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:padding="4dp"
                app:layout_constraintLeft_toRightOf="@id/stockImage"/>

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintRight_toLeftOf="@id/refresh"
                app:layout_constraintBottom_toBottomOf="@id/tvName" />

            <ImageButton
                android:id="@+id/refresh"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/refresh_189687"
                app:layout_constraintBaseline_toBaselineOf="@id/tvName"
                app:layout_constraintRight_toRightOf="parent">

            </ImageButton>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvCurrentPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/tvPriceChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <Button
                    android:id="@+id/btn1D"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1D"
                    android:onClick="onTimeFrameSelected" />

                <Button
                    android:id="@+id/btn1W"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1W"
                    android:onClick="onTimeFrameSelected" />

                <Button
                    android:id="@+id/btn1M"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1M"
                    android:onClick="onTimeFrameSelected" />

                <Button
                    android:id="@+id/btn1Y"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1Y"
                    android:onClick="onTimeFrameSelected" />

                <Button
                    android:id="@+id/btnAll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ALL"
                    android:onClick="onTimeFrameSelected" />
        </LinearLayout>
    </HorizontalScrollView>


<androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="16dp"
                android:layout_marginTop="16dp"/>


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_tab_selector"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:text="Overview"
                android:onClick="onTabSelected" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_tab_selector"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:text="Market Stats"
                android:onClick="onTabSelected" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_tab_selector"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:text="Additional Info"
                android:onClick="onTabSelected" />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:useDefaultMargins="true"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center_horizontal">


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:background="@android:color/white"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@android:drawable/btn_plus"
                        android:contentDescription="2222"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="5dp">

                        <TextView
                            android:id="@+id/tvOpenPriceLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/open_price"
                            android:textSize="14sp"
                            android:textColor="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tvOpenPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:background="@android:color/white"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@android:drawable/btn_plus"
                        android:contentDescription="12222"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="5dp">

                        <TextView
                            android:id="@+id/tvVolumeLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/volume"
                            android:textSize="14sp"
                            android:textColor="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tvVolume"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:useDefaultMargins="true"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center_horizontal">


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:background="@android:color/white"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/low_price"
                        android:src="@android:drawable/arrow_down_float"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="5dp">

                        <TextView
                            android:id="@+id/tvLow24hLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/low_24"
                            android:textSize="14sp"
                            android:textColor="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tvLow24h"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_margin="4dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:background="@android:color/white"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/high_price"
                        android:src="@android:drawable/arrow_up_float"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="16dp">

                        <TextView
                            android:id="@+id/tvHigh24hLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/high_24"
                            android:textSize="14sp"
                            android:textColor="@android:color/darker_gray" />

                        <TextView
                            android:id="@+id/tvHigh24h"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>



        <Button
            android:id="@+id/addToWatchlistButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add to Watchlist"
            android:layout_marginTop="20dp"
            android:background="#0000FF"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>
